Update project to v11

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       name="description"
       content="Milena Emmert é instrutora de programação com experiência em desenvolvimento front-end e design."
     />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="src/assets/images/main-about/mi.webp"
+      type="image/webp"
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Milena Emmert Dev & Designer</title>
   </head>
