--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Milena Emmert é instrutora de programação com experiência em desenvolvimento front-end e design."
+      content="Milena Emmert é analista de dados e instrutora de programação com experiência em desenvolvimento front-end e design."
     />
     <link
       rel="preload"
@@ -15,7 +15,7 @@
       type="image/webp"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Milena Emmert Dev & Designer</title>
+    <title>Milena Emmert Dev & Analista de Dados</title>
   </head>
   <body>
     <div id="root"></div>
